refactor docker and integrations tests